// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions: transactions transactionBroadcasted should dispatch pendingTransactionAdded action if transformedTransaction sender address is the same as LSK address 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": Object {
          "asset": Object {
            "votes": Array [
              Object {
                "amount": 2000000000n,
                "delegateAddress": Object {
                  "data": Array [
                    185,
                    194,
                    40,
                    186,
                    229,
                    249,
                    166,
                    248,
                    160,
                    189,
                    119,
                    135,
                    180,
                    193,
                    35,
                    191,
                    29,
                    228,
                    190,
                    221,
                  ],
                  "type": "Buffer",
                },
              },
            ],
          },
          "assetID": 1,
          "fee": 142000n,
          "id": "ad0e0acbe8a3ece3087c8362149ca39c470e565d268df32e57de5d3fe2e1ea5c",
          "moduleID": 5,
          "nonce": 2n,
          "senderPublicKey": Object {
            "data": Array [
              32,
              86,
              136,
              73,
              43,
              197,
              45,
              218,
              191,
              220,
              16,
              250,
              119,
              40,
              184,
              188,
              181,
              148,
              42,
              209,
              124,
              104,
              171,
              92,
              32,
              233,
              97,
              83,
              253,
              26,
              198,
              87,
            ],
            "type": "Buffer",
          },
          "signatures": Array [
            Object {
              "data": Array [
                75,
                252,
                10,
                181,
                225,
                179,
                195,
                251,
                28,
                167,
                54,
                42,
                204,
                145,
                119,
                117,
                206,
                99,
                69,
                242,
                106,
                38,
                29,
                89,
                45,
                131,
                198,
                42,
                209,
                86,
                233,
                2,
                33,
                38,
                154,
                59,
                66,
                53,
                22,
                194,
                184,
                76,
                30,
                189,
                210,
                133,
                211,
                191,
                131,
                190,
                104,
                143,
                90,
                21,
                140,
                29,
                175,
                114,
                69,
                254,
                206,
                160,
                53,
                10,
              ],
              "type": "Buffer",
            },
          ],
        },
        "type": "BROADCAST_TRANSACTION_SUCCESS",
      },
    ],
    Array [
      Object {
        "data": 2021-11-12T14:25:58.742Z,
        "type": "TIMER_RESET",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`actions: transactions transactionCreated should dispatch transactionCreatedSuccess action if there are no errors 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": Object {
          "asset": Object {
            "amount": 21000000n,
            "data": "",
            "recipientAddress": Object {
              "data": Array [
                138,
                38,
                224,
                248,
                38,
                31,
                60,
                176,
                151,
                116,
                145,
                187,
                66,
                220,
                1,
                35,
                47,
                96,
                170,
                208,
              ],
              "type": "Buffer",
            },
          },
          "assetID": 0,
          "fee": 141000n,
          "id": Object {
            "data": Array [
              159,
              61,
              39,
              83,
              86,
              37,
              71,
              15,
              32,
              214,
              177,
              72,
              207,
              162,
              189,
              253,
              43,
              57,
              238,
              26,
              100,
              87,
              68,
              175,
              85,
              152,
              200,
              185,
              79,
              160,
              223,
              200,
            ],
            "type": "Buffer",
          },
          "moduleID": 2,
          "nonce": 0n,
          "senderPublicKey": Object {
            "data": Array [
              32,
              86,
              136,
              73,
              43,
              197,
              45,
              218,
              191,
              220,
              16,
              250,
              119,
              40,
              184,
              188,
              181,
              148,
              42,
              209,
              124,
              104,
              171,
              92,
              32,
              233,
              97,
              83,
              253,
              26,
              198,
              87,
            ],
            "type": "Buffer",
          },
          "signatures": Array [
            Object {
              "data": Array [
                68,
                152,
                111,
                35,
                216,
                251,
                44,
                220,
                176,
                50,
                7,
                2,
                64,
                241,
                247,
                169,
                57,
                175,
                77,
                30,
                145,
                128,
                54,
                20,
                13,
                93,
                106,
                4,
                6,
                102,
                182,
                227,
                29,
                2,
                205,
                220,
                153,
                88,
                94,
                100,
                220,
                0,
                235,
                246,
                35,
                57,
                220,
                158,
                108,
                169,
                33,
                187,
                43,
                102,
                31,
                207,
                239,
                187,
                4,
                139,
                174,
                87,
                206,
                5,
              ],
              "type": "Buffer",
            },
          ],
        },
        "type": "TRANSACTION_CREATED_SUCCESS",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
